<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="at.tugraz.morning08.a_students_life.StartMenuActivity">


    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="top|center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/options_btn"
        android:textColor="#001090"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:gravity="top|center_horizontal"
            android:text="@string/choose_lang_text"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:checkedButton="@id/lang_en_radio">

            <RadioButton
                android:id="@id/lang_en_radio"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/lang_en"
                android:textSize="15sp" />

            <RadioButton
                android:id="@id/lang_de_radio"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/lang_de"
                android:textSize="15sp" />
        </RadioGroup>

        <Button
            android:id="@id/save_lang_btn"
            android:textSize="25dp"
            android:background="@drawable/start_menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="saveOptionsLanguage"
            android:text="@string/save_btn" />

        <Button
            android:id="@id/cancel_lang_btn"
            android:textSize="25dp"
            android:background="@drawable/start_menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="cancelOptionsLanguage"
            android:text="@string/cancel_btn" />

    </LinearLayout>
</FrameLayout>
