<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="10"
    android:id="@+id/popUp_hunger_ll"
    tools:context="at.tugraz.morning08.a_students_life.MainPageActivity">

    <!-- TODO: add static buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/eat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="eat_button_onClick"
            android:text="@string/activity_eat" />

        <Button
            android:id="@+id/goingOutToEat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="goingOutToEat_button_onClick"
            android:text="@string/activity_eatOutside" />

        <Button
            android:id="@+id/snack_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="snack_button_onClick"
            android:text="@string/activity_snack" />
    </LinearLayout>

</LinearLayout>