<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="10"
    android:id="@+id/popUp_stress_ll"
    tools:context="at.tugraz.morning08.a_students_life.MainPageActivity">

<!-- TODO: add static buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/watchTV_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="watchTV_button_onClick"
            android:text="@string/activity_watchTv" />

        <Button
            android:id="@+id/readingBook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="readingBook_button_onClick"
            android:text="@string/activity_readBook" />

        <Button
            android:id="@+id/sports_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="sports_button_onClick"
            android:text="@string/activity_doSports" />
    </LinearLayout>

</LinearLayout>