<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context="at.tugraz.morning08.a_students_life.SetupActivity"
    android:onClick="hideVirtualKeyboard">

    <FrameLayout
        android:id="@+id/framelayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="102dp"
        android:onClick="hideVirtualKeyboard">

        <LinearLayout
            android:id="@+id/linearLayout_setup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:onClick="hideVirtualKeyboard">

            <TextView
                android:id="@+id/introduction_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="hideVirtualKeyboard"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="30dp"
                android:text="@string/introduction_tv"
                android:textSize="16dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/user_name_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/name_ph"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:onClick="hideVirtualKeyboard"
                android:text="@string/gender_ph"
                android:textSize="16dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="hideVirtualKeyboard"
                android:checkedButton="@+id/gender_male_radio">

                <RadioButton
                    android:id="@id/gender_male_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="60dp"
                    android:onClick="hideVirtualKeyboard"
                    android:text="@string/gender_male_li" />

                <RadioButton
                    android:id="@id/gender_female_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="60dp"
                    android:onClick="hideVirtualKeyboard"
                    android:text="@string/gender_female_li" />
            </RadioGroup>

            <Button
                android:id="@id/next01_btn"
                android:textSize="25dp"
                android:background="@drawable/start_menu_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="100dp"
                android:onClick="setup01_next"
                android:text="@string/next_btn" />

        </LinearLayout>
    </FrameLayout>
</FrameLayout>
