<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/startPage_fl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="at.tugraz.morning08.a_students_life.StartMenuActivity">


    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="top|center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="#001090"
        android:textSize="40sp"
        android:textStyle="bold" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@id/start_btn"
            android:textSize="25dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/start_menu_btn"
            android:elevation="30dp"
            android:onClick="start_game"
            android:text="@string/start_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@id/load_btn"
            android:textSize="25dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/start_menu_btn"
            android:elevation="30dp"
            android:onClick="loadGame"
            android:text="@string/load_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/options_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/start_menu_btn"
            android:elevation="30dp"
            android:onClick="show_options"
            android:padding="3dp"
            android:scaleType="fitEnd"
            android:src="@drawable/settings_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>