<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statsPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/studyProgressBar" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/energyProgressBar" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stressProgressBar" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialProgressBar" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungerProgressBar" />

    <ProgressBar
        android:id="@+id/energyProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:indeterminate="false"
        android:indeterminateTint="@android:color/holo_green_light"
        android:progressTint="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energyLabel" />

    <TextView
        android:id="@+id/energyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/stats_energy"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewEnergy"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageView
        android:id="@+id/imageViewEnergy"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/energy_btn"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/stressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/stats_stress"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewStress"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageViewStress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/stress_btn"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ProgressBar
        android:id="@+id/stressProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:progressTint="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stressLabel" />

    <TextView
        android:id="@+id/hungerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/stats_hunger"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewHunger"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageViewHunger"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/hunger_btn"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/socialLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/stats_social"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewSocial"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <ImageView
        android:id="@+id/imageViewSocial"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/social_btn"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/studyLabel"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/stats_study_progress"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/hungerProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:progressTint="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungerLabel" />

    <ProgressBar
        android:id="@+id/socialProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:progressTint="@android:color/holo_blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialLabel" />

    <ProgressBar
        android:id="@+id/studyProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:max="180"
        android:progressTint="@android:color/black"
        android:scaleY="2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/studyLabel" />

    <TextView
        android:id="@+id/moneyLabel"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/stats_money"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/moneyAmountLabel"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:text="@string/stats_dummy_text"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/moneyLabel"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/graduation_hat" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:srcCompat="@drawable/money_btn" />

</android.support.constraint.ConstraintLayout>